force-app/main/default/objects/Opportunity/fields/Docusign_Params_for_Counsel_Doc__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Params_for_Counsel_Doc__c</fullName>
    <formula>&quot;&amp;DocuSignR1EmailSubject=&quot;&amp;Account.Name&amp;&quot;+Replacement+Counsel+Documents&amp;DocuSignR1EmailBlurb=&quot;&amp;Account.Name&amp;&quot;,%0A%0AAttached+are+your+&quot; &amp; IF(ISPICKVAL(Account.Business_Unit__c,&quot;Rhino&quot;),&quot;Rhino+Legal+Finance&quot;, &quot;Easy+Legal+Finance&quot;) &amp; &quot;+replacement+counsel+documents.+%0A%0APlease+review+the+attached+documents+and+sign+electronically,+where+specified.+As+soon+as+we+receive+your+signed+copies,+they+will+be+forwarded+directly+to+your+legal+representative.+%0A%0AShould+you+have+any+questions+or+concerns,+please+do+not+hesitate+to+contact+us.&amp;DocuSignR2EmailSubject=&quot;&amp;Account.Name&amp;&quot;+Replacement+Counsel+Documents&amp;DocuSignR2EmailBlurb=%0A%0AAttached+are+your+&quot; &amp; IF(ISPICKVAL(Account.Business_Unit__c,&quot;Rhino&quot;),&quot;Rhino+Legal+Finance&quot;, &quot;Easy+Legal+Finance&quot;) &amp; &quot;+replacement+counsel+documents.+%0A%0APlease+review+and+sign+where+specified.+%0A%0AShould+you+have+any+questions+or+concerns,+please+do+not+hesitate+to+contact+us.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign Params for Counsel Doc</label>
    <type>Text</type>
</CustomField>