force-app/main/default/objects/Opportunity/fields/Drawdown_Admin_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Admin_Fee_Total__c</fullName>
    <formula>Admin_Fee_Roll_up__c - Admin_Fee_Reversed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawdown Admin Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>