force-app/main/default/objects/Opportunity/fields/Drawdown_Principal_Total__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Principal_Total__c</fullName>
    <formula>Drawdown_Total__c - Principal_Reversed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawdown Principal Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>