force-app/main/default/objects/Opportunity/fields/Drawdown_Total__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Total__c</fullName>
    <label>Drawdown Total</label>
    <summarizedField>Drawdown__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Admin Fee, Cheque, e-Transfer, Other</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Drawdown__c.Reference_Notes__c</field>
        <operation>notEqual</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>