force-app/main/default/objects/Opportunity/fields/Drawdown_Total_Interest__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Total_Interest__c</fullName>
    <formula>Payout_Interest__c - Interest_Reversed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawdown Total Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>