force-app/main/default/objects/Opportunity/fields/Drawdown_Total_wo_Payment__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Total_wo_Payment__c</fullName>
    <label>Drawdown Total w/o Payment</label>
    <summarizedField>Drawdown__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Drawdown__c.Payment_Method__c</field>
        <operation>notEqual</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Drawdown__c.Reference_Notes__c</field>
        <operation>notEqual</operation>
        <value>Payment Rejected, Payment Re-processed, Referral Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>