force-app/main/default/objects/Opportunity/fields/DS_Completed__c.field-meta.xml
<CustomField>
    <fullName>DS_Completed__c</fullName>
    <description>Updated by a rollup definition. If this field changes, an email is sent to the Case Manager (assigned to).</description>
    <label>DS Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>