force-app/main/default/objects/Opportunity/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Please enter the Date to be used on Loan Documents</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>