force-app/main/default/objects/Opportunity/fields/Effective_Day_Month__c.field-meta.xml
<CustomField>
    <fullName>Effective_Day_Month__c</fullName>
    <formula>Effective_Day__c &amp;&quot; &quot;&amp; Effective_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Day &amp; Month</label>
    <type>Text</type>
</CustomField>