force-app/main/default/objects/Opportunity/fields/Effective_Month_Day__c.field-meta.xml
<CustomField>
    <fullName>Effective_Month_Day__c</fullName>
    <formula>Effective_Month__c &amp;&quot; &quot;&amp; Effective_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Month &amp; Day</label>
    <type>Text</type>
</CustomField>