force-app/main/default/objects/Opportunity/fields/Effective_Year__c.field-meta.xml
<CustomField>
    <fullName>Effective_Year__c</fullName>
    <formula>RIGHT( TEXT(YEAR(Effective_Date__c)),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Year</label>
    <type>Text</type>
</CustomField>