force-app/main/default/objects/Opportunity/fields/Estimated_of_Deals__c.field-meta.xml
<CustomField>
    <fullName>Estimated_of_Deals__c</fullName>
    <inlineHelpText>Please indicate the estimated number of deals this account can refer to us.</inlineHelpText>
    <label>Estimated # of Deals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>