force-app/main/default/objects/Opportunity/fields/Fee_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Fee_Calculation_Method__c</fullName>
    <label>Fee Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount calculated as % of loan amount</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
                <default>true</default>
                <label>Fixed Amount</label>
            </value>
            <value>
                <fullName>Customized Amount</fullName>
            </value>
            <value>
                <fullName>Amount calculated as % of principal balance</fullName>
                <isActive>false</isActive>
                <label>Amount calculated as % of principal balance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>