force-app/main/default/objects/Opportunity/fields/File_No__c.field-meta.xml
<CustomField>
    <fullName>File_No__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account File No</inlineHelpText>
    <label>File No</label>
    <type>Text</type>
</CustomField>