force-app/main/default/objects/Opportunity/fields/File_Sent_For_EFT_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Sent_For_EFT_Date__c</fullName>
    <label>File Sent For EFT Date</label>
    <type>Date</type>
</CustomField>