force-app/main/default/objects/Opportunity/fields/First_Drawdown_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Drawdown_Amount__c</fullName>
    <label>First Drawdown Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>