force-app/main/default/objects/Opportunity/fields/Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Amount__c</fullName>
    <label>Fixed Amount</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fee_Calculation_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>$0</fullName>
            </value>
            <value>
                <fullName>$375</fullName>
            </value>
            <value>
                <fullName>$475</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>