force-app/main/default/objects/Opportunity/fields/Funding_Address__c.field-meta.xml
<CustomField>
    <fullName>Funding_Address__c</fullName>
    <label>Funding Address</label>
    <type>TextArea</type>
</CustomField>