force-app/main/default/objects/Opportunity/fields/Funding_Details_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Details_Status__c</fullName>
    <label>Funding Details Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Setup Check</fullName>
            </value>
            <value>
                <fullName>Process Drawdowns</fullName>
            </value>
            <value>
                <fullName>Populate PPSA</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>