force-app/main/default/objects/Opportunity/fields/Funding_Requested__c.field-meta.xml
<CustomField>
    <fullName>Funding_Requested__c</fullName>
    <label>Funding Requested</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>