force-app/main/default/objects/Opportunity/fields/Interest_Accrued_as_of_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrued_as_of_Payout_Date__c</fullName>
    <label>Interest Accrued as of Payout Date</label>
    <summarizedField>Drawdown__c.Accrued_Interest_as_of_Payout_Date__c</summarizedField>
    <summaryForeignKey>Drawdown__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>