force-app/main/default/objects/Opportunity/fields/Interest_Compounding_Period__c.field-meta.xml
<CustomField>
    <fullName>Interest_Compounding_Period__c</fullName>
    <label>Interest Compounding Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple Interest</fullName>
            </value>
            <value>
                <fullName>Compounding Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>