force-app/main/default/objects/Opportunity/fields/Interest_Deferral_Period__c.field-meta.xml
<CustomField>
    <fullName>Interest_Deferral_Period__c</fullName>
    <label>Interest Deferral Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>