force-app/main/default/objects/Opportunity/fields/Interest_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Formula__c</fullName>
    <formula>IF( ISBLANK( Interest_Rate__c )  , &#39;&#39; , TEXT(Interest_Rate__c*100)&amp;&quot;%&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Rate Formula</label>
    <type>Text</type>
</CustomField>