force-app/main/default/objects/Opportunity/fields/Interest_Received__c.field-meta.xml
<CustomField>
    <fullName>Interest_Received__c</fullName>
    <label>Interest Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>