force-app/main/default/objects/Opportunity/fields/Interest_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Interest_Reversed__c</fullName>
    <label>Interest Reversed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>