force-app/main/default/objects/Opportunity/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>