force-app/main/default/objects/Opportunity/fields/Invoice_Discount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Discount__c</fullName>
    <formula>Discount_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>