force-app/main/default/objects/Opportunity/fields/Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referred Cases</relationshipLabel>
    <relationshipName>Referred_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>