force-app/main/default/objects/Opportunity/fields/Law_Firm_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Account_Owner__c</fullName>
    <description>Field used for reporting purposes.</description>
    <formula>Law_Firm__r.Owner.FirstName &amp; &quot; &quot; &amp; Law_Firm__r.Owner.LastName</formula>
    <label>Law Firm Account Owner</label>
    <type>Text</type>
</CustomField>