force-app/main/default/objects/Opportunity/fields/Law_Firm_Authorization_Clause__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Authorization_Clause__c</fullName>
    <description>This field is sued to show/hide the authorization clause in the loan documents</description>
    <formula>TEXT(Law_Firm__r.Authorization_Clause__c)</formula>
    <label>Law Firm Authorization Clause</label>
    <type>Text</type>
</CustomField>