force-app/main/default/objects/Opportunity/fields/Law_Firm_City__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_City__c</fullName>
    <formula>Law_Firm__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Firm City</label>
    <type>Text</type>
</CustomField>