force-app/main/default/objects/Opportunity/fields/Law_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Id__c</fullName>
    <description>Field used for the jump off report.</description>
    <formula>Law_Firm__r.Id</formula>
    <label>Law Firm Id</label>
    <type>Text</type>
</CustomField>