force-app/main/default/objects/Opportunity/fields/Law_Firm_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm Lawyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboarding Opportunity</relationshipLabel>
    <relationshipName>Onboarding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>