force-app/main/default/objects/Opportunity/fields/Law_Firm_Name_W2L__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Name_W2L__c</fullName>
    <label>Law Firm Name W2L</label>
    <length>255</length>
    <type>Text</type>
</CustomField>