force-app/main/default/objects/Opportunity/fields/Law_Firm_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Postal_Code__c</fullName>
    <formula>Law_Firm__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Firm Postal Code</label>
    <type>Text</type>
</CustomField>