force-app/main/default/objects/Opportunity/fields/Law_Firm_Province__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Province__c</fullName>
    <formula>Law_Firm__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Firm Province</label>
    <type>Text</type>
</CustomField>