force-app/main/default/objects/Opportunity/fields/Law_Firm_Street__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Street__c</fullName>
    <formula>Law_Firm__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Firm Street</label>
    <type>Text</type>
</CustomField>