force-app/main/default/objects/Opportunity/fields/Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Cases</relationshipLabel>
    <relationshipName>Referred_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>