force-app/main/default/objects/Opportunity/fields/Lawyer_Email__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Email__c</fullName>
    <formula>Lawyer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lawyer Email</label>
    <type>Text</type>
</CustomField>