force-app/main/default/objects/Opportunity/fields/Lawyer_Id__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Id__c</fullName>
    <description>Field used for the contact jump of report.</description>
    <formula>Lawyer__r.Id</formula>
    <label>Lawyer Id</label>
    <type>Text</type>
</CustomField>