force-app/main/default/objects/Opportunity/fields/Lawyer_Name_from_W2L__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name_from_W2L__c</fullName>
    <label>Lawyer Name from W2L</label>
    <length>50</length>
    <type>Text</type>
</CustomField>