force-app/main/default/objects/Opportunity/fields/Lawyer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Phone__c</fullName>
    <formula>Lawyer__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lawyer Phone</label>
    <type>Text</type>
</CustomField>