force-app/main/default/objects/Opportunity/fields/Loan_Amt_minus_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amt_minus_Admin_Fee__c</fullName>
    <formula>Amount - Admin_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amt minus Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>