force-app/main/default/objects/Opportunity/fields/Loan_Available_to_Drawdown__c.field-meta.xml
<CustomField>
    <fullName>Loan_Available_to_Drawdown__c</fullName>
    <formula>IF(ISPICKVAL(Stage_Status__c,&#39;Paid Off&#39;), 0, Amount - Drawdown_Total__c + Principal_Reversed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Available to Drawdown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>