force-app/main/default/objects/Opportunity/fields/Loan_being_consolidated__c.field-meta.xml
<CustomField>
    <fullName>Loan_being_consolidated__c</fullName>
    <label>Loan being consolidated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>