force-app/main/default/objects/Opportunity/fields/Loan_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loan_Declined_Reason__c</fullName>
    <label>Loan Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Underwriter Recommendation</fullName>
            </value>
            <value>
                <fullName>Lawyer Not Supportive of Application</fullName>
            </value>
            <value>
                <fullName>Client Got a Loan From a Different Lender</fullName>
            </value>
            <value>
                <fullName>US Claim</fullName>
            </value>
            <value>
                <fullName>Client Has an Undischarged Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Client Is Involved in a Class-Action Suit</fullName>
            </value>
            <value>
                <fullName>Client Abandoned Process-no reason given (Stopped Responding)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>