force-app/main/default/objects/Opportunity/fields/Loan_Registration_Complete__c.field-meta.xml
<CustomField>
    <fullName>Loan_Registration_Complete__c</fullName>
    <formula>AND(
    NOT(ISBLANK(Date_Financing_Statement_Done__c)),
    NOT(ISBLANK(Date_Financing_Statement_Expires__c)),
    NOT(ISBLANK(Registration_Number__c)),
    NOT(Date_Financing_Statement_Expires__c &lt; TODAY())
)</formula>
    <label>Loan Registration Complete</label>
    <type>Checkbox</type>
</CustomField>