force-app/main/default/objects/Opportunity/fields/Loan_Requests__c.field-meta.xml
<CustomField>
    <fullName>Loan_Requests__c</fullName>
    <label>Loan Requests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Loan</fullName>
            </value>
            <value>
                <fullName>2nd Loan</fullName>
            </value>
            <value>
                <fullName>3rd Loan</fullName>
            </value>
            <value>
                <fullName>4th Loan</fullName>
            </value>
            <value>
                <fullName>5th Loan</fullName>
            </value>
            <value>
                <fullName>6th Loan</fullName>
            </value>
            <value>
                <fullName>7th Loan</fullName>
            </value>
            <value>
                <fullName>8th Loan</fullName>
            </value>
            <value>
                <fullName>9th Loan</fullName>
            </value>
            <value>
                <fullName>10th Loan</fullName>
            </value>
            <value>
                <fullName>11th Loan</fullName>
            </value>
            <value>
                <fullName>12th Loan</fullName>
            </value>
            <value>
                <fullName>13th Loan</fullName>
            </value>
            <value>
                <fullName>14th Loan</fullName>
            </value>
            <value>
                <fullName>15th Loan</fullName>
            </value>
            <value>
                <fullName>16th Loan</fullName>
            </value>
            <value>
                <fullName>17th Loan</fullName>
            </value>
            <value>
                <fullName>18th Loan</fullName>
            </value>
            <value>
                <fullName>19th Loan</fullName>
            </value>
            <value>
                <fullName>20th Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>