force-app/main/default/objects/Opportunity/fields/Loan_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>Loan_Setup_Complete__c</fullName>
    <formula>NOT(
    OR( 
        AND(
            ISPICKVAL(Minimum_Interest_Period__c, &#39;&#39;), 
            NOT(OR(IsPickVal(Interest_Deferral_Period__c,&#39;0&#39;), 
                IsPickVal(Interest_Deferral_Period__c,&#39;&#39;)))
            ),
        ISBLANK( Interest_Rate__c), 
        ISPICKVAL(Interest_Compounding_Period__c,&#39;&#39;),
        AND(
            ISPICKVAL(Compounding_Interest__c, &#39;&#39;),
            ISPICKVAL(Interest_Compounding_Period__c,&#39;Compounding Interest&#39;)
        )
    ) 
)</formula>
    <label>Loan Setup Complete</label>
    <type>Checkbox</type>
</CustomField>